--- a/pytorch-probot.yml
+++ b/pytorch-probot.yml
@@ -2,8 +2,7 @@ tracking_issue: 24422
 ciflow_tracking_issue: 64124
 ciflow_push_tags:
 - ciflow/binaries
-- ciflow/binaries_conda
-- ciflow/binaries_libtorch
+ ciflow/binaries_libtorch
 - ciflow/binaries_wheel
 - ciflow/inductor
 - ciflow/inductor-perf-compare
